ArmAssembler/src/main/ant14/.antlr/ParserParser.java
// Generated from /home/jacob/Desktop/ArmAssembler/ArmAssembler/src/main/ant14/Parser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, ADC=3, ADD=4, AND=5, BIC=6, BL=7, BX=8, CMP=9, EOR=10, 
		LDC=11, LDM=12, LDR=13, MCR=14, MLA=15, MOV=16, MRC=17, MRS=18, MSR=19, 
		MUL=20, MVN=21, ORR=22, RSB=23, RSC=24, SBC=25, STC=26, STM=27, STR=28, 
		SUB=29, SWI=30, SWP=31, TEQ=32, TST=33, TRANSFERTYPE=34, SB=35, SH=36, 
		ADDRESSINGMODE=37, FD=38, ED=39, FA=40, EA=41, IA=42, IB=43, DA=44, DB=45, 
		ASL=46, LSL=47, LSR=48, ASR=49, ROR=50, SHIFTNAME=51, RPX=52, EQ=53, NE=54, 
		CS=55, CC=56, MI=57, PL=58, VS=59, VC=60, HI=61, LS=62, GE=63, LT=64, 
		GT=65, LE=66, AL=67, COND=68, REG=69, NUMBER=70, PSR=71, PSRF=72, CPSR=73, 
		CPSR_ALL=74, CPSR_FLG=75, SPSR=76, SPSR_ALL=77, SPSR_FLG=78, EXP=79, WS=80, 
		COMMA=81, LCURL=82, RCURL=83, REQ=84, RNE=85, RLE=86, RLT=87, RGE=88, 
		RGT=89, TIMES=90, MINUS=91, PLUS=92, MOD=93, DIV=94, LSHIFT=95, RSHIFT=96, 
		BAND=97, BOR=98, BXOR=99, LAND=100, LOR=101, HASH=102, IDENT=103, A=104, 
		B=105, C=106, D=107, E=108, F=109, G=110, H=111, I=112, J=113, K=114, 
		L=115, M=116, N=117, O=118, P=119, Q=120, R=121, S=122, T=123, U=124, 
		V=125, W=126, X=127, Y=128, Z=129;
	public static final int
		RULE_instruction = 0, RULE_bInstr = 1, RULE_blInstr = 2, RULE_bxInstr = 3, 
		RULE_ldmInstr = 4, RULE_ldrByteInstr = 5, RULE_ldrDefInstr = 6, RULE_mlaInstr = 7, 
		RULE_mrsInstr = 8, RULE_msrDefInstr = 9, RULE_msrPrivInstr = 10, RULE_mulInstr = 11, 
		RULE_stmInstr = 12, RULE_strByteInstr = 13, RULE_strDefInstr = 14, RULE_swiInstr = 15, 
		RULE_swpInstr = 16, RULE_addInstr = 17, RULE_andInstr = 18, RULE_eorInstr = 19, 
		RULE_subInstr = 20, RULE_rsbInstr = 21, RULE_adcInstr = 22, RULE_sbcInstr = 23, 
		RULE_rscInstr = 24, RULE_tstInstr = 25, RULE_teqInstr = 26, RULE_cmpInstr = 27, 
		RULE_orrInstr = 28, RULE_movInstr = 29, RULE_bicInstr = 30, RULE_mvnInstr = 31, 
		RULE_op2 = 32, RULE_shift = 33, RULE_rList = 34, RULE_rValue = 35, RULE_poundExpression = 36, 
		RULE_expression = 37, RULE_andExpr = 38, RULE_relational = 39, RULE_primary = 40, 
		RULE_bitwise = 41, RULE_term = 42, RULE_unary = 43, RULE_number = 44, 
		RULE_label = 45, RULE_address = 46;
	private static String[] makeRuleNames() {
		return new String[] {
			"instruction", "bInstr", "blInstr", "bxInstr", "ldmInstr", "ldrByteInstr", 
			"ldrDefInstr", "mlaInstr", "mrsInstr", "msrDefInstr", "msrPrivInstr", 
			"mulInstr", "stmInstr", "strByteInstr", "strDefInstr", "swiInstr", "swpInstr", 
			"addInstr", "andInstr", "eorInstr", "subInstr", "rsbInstr", "adcInstr", 
			"sbcInstr", "rscInstr", "tstInstr", "teqInstr", "cmpInstr", "orrInstr", 
			"movInstr", "bicInstr", "mvnInstr", "op2", "shift", "rList", "rValue", 
			"poundExpression", "expression", "andExpr", "relational", "primary", 
			"bitwise", "term", "unary", "number", "label", "address"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "'!'", null, "','", "'{'", 
			"'}'", "'=='", "'!='", "'<='", "'<'", "'>='", "'>'", "'*'", "'-'", "'+'", 
			"'%'", "'/'", "'<<'", "'>>'", "'&'", "'|'", "'^'", "'&&'", "'||'", "'#'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "ADC", "ADD", "AND", "BIC", "BL", "BX", "CMP", "EOR", 
			"LDC", "LDM", "LDR", "MCR", "MLA", "MOV", "MRC", "MRS", "MSR", "MUL", 
			"MVN", "ORR", "RSB", "RSC", "SBC", "STC", "STM", "STR", "SUB", "SWI", 
			"SWP", "TEQ", "TST", "TRANSFERTYPE", "SB", "SH", "ADDRESSINGMODE", "FD", 
			"ED", "FA", "EA", "IA", "IB", "DA", "DB", "ASL", "LSL", "LSR", "ASR", 
			"ROR", "SHIFTNAME", "RPX", "EQ", "NE", "CS", "CC", "MI", "PL", "VS", 
			"VC", "HI", "LS", "GE", "LT", "GT", "LE", "AL", "COND", "REG", "NUMBER", 
			"PSR", "PSRF", "CPSR", "CPSR_ALL", "CPSR_FLG", "SPSR", "SPSR_ALL", "SPSR_FLG", 
			"EXP", "WS", "COMMA", "LCURL", "RCURL", "REQ", "RNE", "RLE", "RLT", "RGE", 
			"RGT", "TIMES", "MINUS", "PLUS", "MOD", "DIV", "LSHIFT", "RSHIFT", "BAND", 
			"BOR", "BXOR", "LAND", "LOR", "HASH", "IDENT", "A", "B", "C", "D", "E", 
			"F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", 
			"T", "U", "V", "W", "X", "Y", "Z"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InstructionContext extends ParserRuleContext {
		public BInstrContext bInstr() {
			return getRuleContext(BInstrContext.class,0);
		}
		public BlInstrContext blInstr() {
			return getRuleContext(BlInstrContext.class,0);
		}
		public BxInstrContext bxInstr() {
			return getRuleContext(BxInstrContext.class,0);
		}
		public LdmInstrContext ldmInstr() {
			return getRuleContext(LdmInstrContext.class,0);
		}
		public LdrByteInstrContext ldrByteInstr() {
			return getRuleContext(LdrByteInstrContext.class,0);
		}
		public LdrDefInstrContext ldrDefInstr() {
			return getRuleContext(LdrDefInstrContext.class,0);
		}
		public MlaInstrContext mlaInstr() {
			return getRuleContext(MlaInstrContext.class,0);
		}
		public MrsInstrContext mrsInstr() {
			return getRuleContext(MrsInstrContext.class,0);
		}
		public MsrDefInstrContext msrDefInstr() {
			return getRuleContext(MsrDefInstrContext.class,0);
		}
		public MsrPrivInstrContext msrPrivInstr() {
			return getRuleContext(MsrPrivInstrContext.class,0);
		}
		public MulInstrContext mulInstr() {
			return getRuleContext(MulInstrContext.class,0);
		}
		public StmInstrContext stmInstr() {
			return getRuleContext(StmInstrContext.class,0);
		}
		public StrByteInstrContext strByteInstr() {
			return getRuleContext(StrByteInstrContext.class,0);
		}
		public StrDefInstrContext strDefInstr() {
			return getRuleContext(StrDefInstrContext.class,0);
		}
		public SwiInstrContext swiInstr() {
			return getRuleContext(SwiInstrContext.class,0);
		}
		public SwpInstrContext swpInstr() {
			return getRuleContext(SwpInstrContext.class,0);
		}
		public AddInstrContext addInstr() {
			return getRuleContext(AddInstrContext.class,0);
		}
		public AndInstrContext andInstr() {
			return getRuleContext(AndInstrContext.class,0);
		}
		public EorInstrContext eorInstr() {
			return getRuleContext(EorInstrContext.class,0);
		}
		public SubInstrContext subInstr() {
			return getRuleContext(SubInstrContext.class,0);
		}
		public RsbInstrContext rsbInstr() {
			return getRuleContext(RsbInstrContext.class,0);
		}
		public AdcInstrContext adcInstr() {
			return getRuleContext(AdcInstrContext.class,0);
		}
		public SbcInstrContext sbcInstr() {
			return getRuleContext(SbcInstrContext.class,0);
		}
		public RscInstrContext rscInstr() {
			return getRuleContext(RscInstrContext.class,0);
		}
		public TstInstrContext tstInstr() {
			return getRuleContext(TstInstrContext.class,0);
		}
		public TeqInstrContext teqInstr() {
			return getRuleContext(TeqInstrContext.class,0);
		}
		public CmpInstrContext cmpInstr() {
			return getRuleContext(CmpInstrContext.class,0);
		}
		public OrrInstrContext orrInstr() {
			return getRuleContext(OrrInstrContext.class,0);
		}
		public MovInstrContext movInstr() {
			return getRuleContext(MovInstrContext.class,0);
		}
		public BicInstrContext bicInstr() {
			return getRuleContext(BicInstrContext.class,0);
		}
		public MvnInstrContext mvnInstr() {
			return getRuleContext(MvnInstrContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_instruction);
		try {
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				bInstr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				blInstr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(96);
				bxInstr();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				ldmInstr();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(98);
				ldrByteInstr();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(99);
				ldrDefInstr();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(100);
				mlaInstr();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(101);
				mrsInstr();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(102);
				msrDefInstr();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(103);
				msrPrivInstr();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(104);
				mulInstr();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(105);
				stmInstr();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(106);
				strByteInstr();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(107);
				strDefInstr();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(108);
				swiInstr();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(109);
				swpInstr();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(110);
				addInstr();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(111);
				andInstr();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(112);
				eorInstr();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(113);
				subInstr();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(114);
				rsbInstr();
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(115);
				adcInstr();
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(116);
				sbcInstr();
				}
				break;
			case 24:
				enterOuterAlt(_localctx, 24);
				{
				setState(117);
				rscInstr();
				}
				break;
			case 25:
				enterOuterAlt(_localctx, 25);
				{
				setState(118);
				tstInstr();
				}
				break;
			case 26:
				enterOuterAlt(_localctx, 26);
				{
				setState(119);
				teqInstr();
				}
				break;
			case 27:
				enterOuterAlt(_localctx, 27);
				{
				setState(120);
				cmpInstr();
				}
				break;
			case 28:
				enterOuterAlt(_localctx, 28);
				{
				setState(121);
				orrInstr();
				}
				break;
			case 29:
				enterOuterAlt(_localctx, 29);
				{
				setState(122);
				movInstr();
				}
				break;
			case 30:
				enterOuterAlt(_localctx, 30);
				{
				setState(123);
				bicInstr();
				}
				break;
			case 31:
				enterOuterAlt(_localctx, 31);
				{
				setState(124);
				mvnInstr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BInstrContext extends ParserRuleContext {
		public TerminalNode B() { return getToken(ParserParser.B, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode COND() { return getToken(ParserParser.COND, 0); }
		public BInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bInstr; }
	}

	public final BInstrContext bInstr() throws RecognitionException {
		BInstrContext _localctx = new BInstrContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bInstr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(B);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COND) {
				{
				setState(128);
				match(COND);
				}
			}

			setState(131);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlInstrContext extends ParserRuleContext {
		public TerminalNode BL() { return getToken(ParserParser.BL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode COND() { return getToken(ParserParser.COND, 0); }
		public BlInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blInstr; }
	}

	public final BlInstrContext blInstr() throws RecognitionException {
		BlInstrContext _localctx = new BlInstrContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_blInstr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(BL);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COND) {
				{
				setState(134);
				match(COND);
				}
			}

			setState(137);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BxInstrContext extends ParserRuleContext {
		public TerminalNode BX() { return getToken(ParserParser.BX, 0); }
		public TerminalNode REG() { return getToken(ParserParser.REG, 0); }
		public TerminalNode COND() { return getToken(ParserParser.COND, 0); }
		public BxInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bxInstr; }
	}

	public final BxInstrContext bxInstr() throws RecognitionException {
		BxInstrContext _localctx = new BxInstrContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bxInstr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(BX);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COND) {
				{
				setState(140);
				match(COND);
				}
			}

			setState(143);
			match(REG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LdmInstrContext extends ParserRuleContext {
		public TerminalNode LDM() { return getToken(ParserParser.LDM, 0); }
		public TerminalNode ADDRESSINGMODE() { return getToken(ParserParser.ADDRESSINGMODE, 0); }
		public TerminalNode REG() { return getToken(ParserParser.REG, 0); }
		public TerminalNode COMMA() { return getToken(ParserParser.COMMA, 0); }
		public RListContext rList() {
			return getRuleContext(RListContext.class,0);
		}
		public TerminalNode COND() { return getToken(ParserParser.COND, 0); }
		public TerminalNode T() { return getToken(ParserParser.T, 0); }
		public TerminalNode BXOR() { return getToken(ParserParser.BXOR, 0); }
		public LdmInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ldmInstr; }
	}

	public final LdmInstrContext ldmInstr() throws RecognitionException {
		LdmInstrContext _localctx = new LdmInstrContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ldmInstr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(LDM);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COND) {
				{
				setState(146);
				match(COND);
				}
			}

			setState(149);
			match(ADDRESSINGMODE);
			setState(150);
			match(REG);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T) {
				{
				setState(151);
				match(T);
				}
			}

			setState(154);
			match(COMMA);
			setState(155);
			rList();
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BXOR) {
				{
				setState(156);
				match(BXOR);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LdrByteInstrContext extends ParserRuleContext {
		public TerminalNode LDR() { return getToken(ParserParser.LDR, 0); }
		public TerminalNode REG() { return getToken(ParserParser.REG, 0); }
		public TerminalNode COMMA() { return getToken(ParserParser.COMMA, 0); }
		public AddressContext address() {
			return getRuleContext(AddressContext.class,0);
		}
		public TerminalNode COND() { return getToken(ParserParser.COND, 0); }
		public TerminalNode B() { return getToken(ParserParser.B, 0); }
		public TerminalNode T() { return getToken(ParserParser.T, 0); }
		public LdrByteInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ldrByteInstr; }
	}

	public final LdrByteInstrContext ldrByteInstr() throws RecognitionException {
		LdrByteInstrContext _localctx = new LdrByteInstrContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ldrByteInstr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(LDR);
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COND) {
				{
				setState(160);
				match(COND);
				}
			}

			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==B) {
				{
				setState(163);
				match(B);
				}
			}

			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T) {
				{
				setState(166);
				match(T);
				}
			}

			setState(169);
			match(REG);
			setState(170);
			match(COMMA);
			setState(171);
			address();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LdrDefInstrContext extends ParserRuleContext {
		public TerminalNode LDR() { return getToken(ParserParser.LDR, 0); }
		public TerminalNode TRANSFERTYPE() { return getToken(ParserParser.TRANSFERTYPE, 0); }
		public TerminalNode REG() { return getToken(ParserParser.REG, 0); }
		public TerminalNode COMMA() { return getToken(ParserParser.COMMA, 0); }
		public AddressContext address() {
			return getRuleContext(AddressContext.class,0);
		}
		public TerminalNode COND() { return getToken(ParserParser.COND, 0); }
		public LdrDefInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ldrDefInstr; }
	}

	public final LdrDefInstrContext ldrDefInstr() throws RecognitionException {
		LdrDefInstrContext _localctx = new LdrDefInstrContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ldrDefInstr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			match(LDR);
			setState(175);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COND) {
				{
				setState(174);
				match(COND);
				}
			}

			setState(177);
			match(TRANSFERTYPE);
			setState(178);
			match(REG);
			setState(179);
			match(COMMA);
			setState(180);
			address();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MlaInstrContext extends ParserRuleContext {
		public TerminalNode MLA() { return getToken(ParserParser.MLA, 0); }
		public List<TerminalNode> REG() { return getTokens(ParserParser.REG); }
		public TerminalNode REG(int i) {
			return getToken(ParserParser.REG, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ParserParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ParserParser.COMMA, i);
		}
		public TerminalNode COND() { return getToken(ParserParser.COND, 0); }
		public TerminalNode S() { return getToken(ParserParser.S, 0); }
		public MlaInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mlaInstr; }
	}

	public final MlaInstrContext mlaInstr() throws RecognitionException {
		MlaInstrContext _localctx = new MlaInstrContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_mlaInstr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			match(MLA);
			setState(184);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COND) {
				{
				setState(183);
				match(COND);
				}
			}
